--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,12 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 26px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: black;
+  background-color: green;
   color: red;
 }
 
