--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
 
 /* Add an active class to highlight the current page */
 .topnav a.active {
-  background-color: #002244;
+  background-color: #4169E1;
   color: #69BE28;
 }
 
@@ -175,5 +175,6 @@
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
 
 
