--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,10 @@
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
 
+.iframe {
+  width: 100%;
+  height: 85vh;
+}
 
 
 
