--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,13 @@
   overflow: hidden;
 }
 
+.panel iframe {
+  width: 100%;
+  height: 85vh;
+  border: none;
+  display: block;
+}
+
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -181,6 +188,7 @@
   height: 85vh;
   border: none;
 }
+
 
 
 
