--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,9 @@
 .panel {
   padding: 0 18px;
   background-color: white;
+  max-height: 0;
   overflow: hidden;
+  transition: max-height 0.3s ease;
 }
 
 .panel iframe {
@@ -181,6 +183,7 @@
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
 
 
 
