--- a/css/main.css
+++ b/css/main.css
@@ -96,9 +96,8 @@
 .panel {
   padding: 0 18px;
   background-color: white;
-  max-height: 0;
   overflow: hidden;
-  transition: max-height 0.3s ease;
+  display: block;
 }
 
 .panel iframe {
@@ -183,6 +182,7 @@
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
 
 
 
