--- a/css/main.css
+++ b/css/main.css
@@ -96,16 +96,8 @@
 .panel {
   padding: 0 18px;
   background-color: white;
-  max-height: 0;
   overflow: hidden;
-  transition: max-height 0.3s ease;
-}
-
-.panel iframe {
-  width: 100%;
-  height: 85vh;
-  border: none;
-  display: block;
+  display: none;
 }
 
 .card {
@@ -183,6 +175,7 @@
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
 
 
 
